[fix] set overflow-y to auto

--- a/src/components/panel/index.scss
+++ b/src/components/panel/index.scss
@@ -28,7 +28,7 @@
 .content {
   flex: 1;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .icon {
